updates for adding categories for market trend, articles and faqs

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2079,6 +2079,43 @@ body {
         }
     }
 
+    .filters {
+        display: flex;
+        gap: 1rem;
+        margin: auto;
+        width: fit-content;
+        padding-bottom: 2rem;
+
+        @include respond-to-mobile {
+            display: grid;
+            gap: 0.5rem;
+            margin: 0 1rem;
+            width: auto;
+        }
+
+        .filter {
+            color: #5f758a;
+            text-align: center;
+            font-family: "DM Sans";
+            font-size: 14px;
+            font-style: normal;
+            font-weight: 600;
+            line-height: 15px;
+            padding: 1rem;
+            border: 1px solid #5f758a;
+            border-radius: 10px;
+            cursor: pointer;
+            transition: all 0.3s ease;
+
+            &.selected,
+            &:hover {
+                background-color: #5f758a;
+                color: #FFFFFF;
+            }
+        }
+
+    }
+
     .faq-list {
         display: grid;
         grid-template-columns: 1fr;
@@ -2204,6 +2241,43 @@ body {
             padding: 1rem;
             width: auto;
         }
+    }
+
+    .filters {
+        display: flex;
+        gap: 1rem;
+        margin: auto;
+        width: fit-content;
+        padding-bottom: 2rem;
+
+        @include respond-to-mobile {
+            display: grid;
+            gap: 0.5rem;
+            margin: 0 1rem;
+            width: auto;
+        }
+
+        .filter {
+            color: #5f758a;
+            text-align: center;
+            font-family: "DM Sans";
+            font-size: 14px;
+            font-style: normal;
+            font-weight: 600;
+            line-height: 15px;
+            padding: 1rem;
+            border: 1px solid #5f758a;
+            border-radius: 10px;
+            cursor: pointer;
+            transition: all 0.3s ease;
+
+            &.selected,
+            &:hover {
+                background-color: #5f758a;
+                color: #FFFFFF;
+            }
+        }
+
     }
 
     .research-articles-list {
